--- a/Dating App/Dating App.csproj
+++ b/Dating App/Dating App.csproj
@@ -48,6 +48,7 @@
     <Compile Include="LoginPage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
