--- a/Dating App/Dating App.csproj
+++ b/Dating App/Dating App.csproj
@@ -51,7 +51,7 @@
     <Compile Include="LoginPage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlFunktioner.cs" />
+    <Compile Include="SqlStuff.cs" />
     <Compile Include="StartPage.cs" />
   </ItemGroup>
   <ItemGroup>
