--- a/Dating App/Dating App.csproj
+++ b/Dating App/Dating App.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Build.Framework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -51,8 +52,11 @@
     <Compile Include="LoginPage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PUA.cs" />
+    <Compile Include="SharedData.cs" />
     <Compile Include="SqlStuff.cs" />
     <Compile Include="StartPage.cs" />
+    <Compile Include="UserMain.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
